Np-2674 Group errors when saving in NVA by exception first